--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,16 @@ h2 {
 	color: $vin-blue;
 }
 
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('../resources/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
+
 .savings { color: $vin-green; }
 .loss { color: $vin-red; }
 input.small { width: 46px; }
